--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".SignUpActivity"></activity>
+        <activity
+            android:name=".HomeActivity"
+            android:label="Home" />
+        <activity android:name=".SignUpActivity" />
+        <activity
+            android:name=".ProfileActivity"
+            android:label="Profile"></activity>
     </application>
 
 </manifest>
