--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,13 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
+
+    // RecyclerView
+    compile 'com.android.support:recyclerview-v7:23.3.+'
+
+    // CardView
+    compile 'com.android.support:cardview-v7:23.3.+'
+
+    // Glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
