--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,19 +25,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    // RecyclerView
+
+    // CardView
+
+    // Glide
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    testCompile 'junit:junit:4.12'
-
-    // RecyclerView
-    compile 'com.android.support:recyclerview-v7:23.3.+'
-
-    // CardView
-    compile 'com.android.support:cardview-v7:23.3.+'
-
-    // Glide
+    compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    testCompile 'junit:junit:4.12'
 }
