Versiunea in care titlurile din BooksByCategory se modifica personalizat in functie de categoria selectata

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".BooksAdapter" />
         <activity android:name=".OrdersActivity" />
-        <activity android:name=".CategoryMenu"></activity>
+        <activity android:name=".CategoryMenu" />
+        <activity android:name=".BookActivity"></activity>
     </application>
 
 </manifest>
