--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
         <activity android:name=".BooksAdapter" />
         <activity android:name=".OrdersActivity" />
         <activity android:name=".CategoryMenu" />
-        <activity android:name=".BookActivity"></activity>
+        <activity android:name=".BookActivity" />
+        <activity android:name=".DescriptionActivity" />
+        <activity android:name=".ReviewsActivity"></activity>
     </application>
 
 </manifest>
