--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     // CardView
 
     // Glide
+
+    //Add Library
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -37,5 +39,9 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.barteksc:android-pdf-viewer:2.3.0'
+    compile 'org.apache.commons:commons-io:1.3.2'
     testCompile 'junit:junit:4.12'
 }
+
+
