Adaugare de carti favorite cu AddFavoriteBookTask, si selectarea cartilor favorite ale unui utilizator cu SelectFavoriteBookTask

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".BooksAdapter" />
-        <activity android:name=".OrdersActivity" />
+        <activity android:name=".FavoriteBooksActivity" />
         <activity android:name=".CategoryMenu" />
         <activity android:name=".BookActivity" />
         <activity android:name=".DescriptionActivity" />
