--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         <activity
             android:name=".HomeActivity"
             android:label="Home" />
-        <activity android:name=".ShoppingActivity" />
+        <activity android:name=".AllBooksActivity" />
         <activity
             android:name=".BooksByCategory"
             android:label="@string/app_name"
