--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,18 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     // RecyclerView
-
     // CardView
-
     // Glide
-
     //Add Library
+    compile files('libs/mail.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -41,7 +38,11 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.barteksc:android-pdf-viewer:2.3.0'
     compile 'org.apache.commons:commons-io:1.3.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0'
+
     testCompile 'junit:junit:4.12'
 }
+
 
 
