--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.example.raluca.storebooksystem"
         minSdkVersion 21
         targetSdkVersion 25
@@ -20,6 +21,7 @@ android {
 }
 
 dependencies {
+   // compile 'com.android.support:support-v4:25.4.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -40,6 +42,8 @@ dependencies {
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0'
+    compile 'com.android.support:multidex:1.0.1'
+    //compile "com.google.android.gms:play-services-gcm:11.0.4"
 
     testCompile 'junit:junit:4.12'
 }
