--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-   // compile 'com.android.support:support-v4:25.4.0'
+    // compile 'com.android.support:support-v4:25.4.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -31,6 +31,8 @@ dependencies {
     // Glide
     //Add Library
     compile files('libs/mail.jar')
+    //compile "com.google.android.gms:play-services-gcm:11.0.4"
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -41,12 +43,15 @@ dependencies {
     compile 'com.github.barteksc:android-pdf-viewer:2.3.0'
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0'
     compile 'com.android.support:multidex:1.0.1'
-    //compile "com.google.android.gms:play-services-gcm:11.0.4"
 
+
+    compile 'me.dm7.barcodescanner:zxing:1.9'
+//    compile 'com.android.support:appcompat-v7:26.+'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
