--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     compile files('libs/mail.jar')
     //compile "com.google.android.gms:play-services-gcm:11.0.4"
 
+    //    compile 'com.android.support:appcompat-v7:26.+'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile files(
+            'libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -44,13 +48,13 @@ dependencies {
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     compile 'com.android.support:multidex:1.0.1'
-
-
     compile 'me.dm7.barcodescanner:zxing:1.9'
-//    compile 'com.android.support:appcompat-v7:26.+'
-//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'junit:junit:4.12'
     testCompile 'junit:junit:4.12'
 }
+
+
+
 
 
 
