--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile 'me.dm7.barcodescanner:zxing:1.9'
     compile 'junit:junit:4.12'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+//    compile(name:'Syncfusion.SfChart..Android', ext:'aar')
     testCompile 'junit:junit:4.12'
 }
 
