--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,37 +27,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Activities.Activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity" />
+        <activity android:name=".Activities.Activities.SignUpActivity" />
         <activity
-            android:name=".ProfileActivity"
+            android:name=".Activities.Activities.ProfileActivity"
             android:label="Profile" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".Activities.Activities.HomeActivity"
             android:label="Home" />
         <activity
-            android:name=".BooksByCategory"
+            android:name=".Activities.Activities.BooksByCategory"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".BooksAdapter" />
-        <activity android:name=".FavoriteBooksActivity" />
-        <activity android:name=".CategoryMenu" />
-        <activity android:name=".BookActivity" />
-        <activity android:name=".DescriptionActivity" />
-        <activity android:name=".ReviewsActivity" />
-        <activity android:name=".AddReviewActivity" />
-        <activity android:name=".PdfViewer" />
-        <activity android:name=".StatisticsActivity" />
-        <activity android:name=".ScanActivity" />
-        <activity android:name=".AudioBooksActivity" />
-        <activity android:name=".MyLibraryActivity" />
-        <activity android:name=".AuthorActivity"></activity>
+        <activity android:name=".Activities.Activities.BooksAdapter" />
+        <activity android:name=".Activities.Activities.FavoriteBooksActivity" />
+        <activity android:name=".Activities.Activities.CategoryMenu" />
+        <activity android:name=".Activities.Activities.BookActivity" />
+        <activity android:name=".Activities.Activities.DescriptionActivity" />
+        <activity android:name=".Activities.Activities.ReviewsActivity" />
+        <activity android:name=".Activities.Activities.AddReviewActivity" />
+        <activity android:name=".Activities.Activities.PdfViewer" />
+        <activity android:name=".Activities.Activities.StatisticsActivity" />
+        <activity android:name=".Activities.Activities.ScanActivity" />
+        <activity android:name=".Activities.Activities.AudioBooksActivity" />
+        <activity android:name=".Activities.Activities.MyLibraryActivity" />
+        <activity android:name=".Activities.Activities.AuthorActivity"></activity>
     </application>
 
 </manifest>
