--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,37 +27,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.Activities.LoginActivity">
+        <activity android:name=".Activities.a.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.Activities.SignUpActivity" />
+        <activity android:name=".Activities.a.SignUpActivity" />
         <activity
-            android:name=".Activities.Activities.ProfileActivity"
+            android:name=".Activities.a.ProfileActivity"
             android:label="Profile" />
         <activity
-            android:name=".Activities.Activities.HomeActivity"
+            android:name=".Activities.a.HomeActivity"
             android:label="Home" />
         <activity
-            android:name=".Activities.Activities.BooksByCategory"
+            android:name=".Activities.a.BooksByCategory"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Activities.Activities.BooksAdapter" />
-        <activity android:name=".Activities.Activities.FavoriteBooksActivity" />
-        <activity android:name=".Activities.Activities.CategoryMenu" />
-        <activity android:name=".Activities.Activities.BookActivity" />
-        <activity android:name=".Activities.Activities.DescriptionActivity" />
-        <activity android:name=".Activities.Activities.ReviewsActivity" />
-        <activity android:name=".Activities.Activities.AddReviewActivity" />
-        <activity android:name=".Activities.Activities.PdfViewer" />
-        <activity android:name=".Activities.Activities.StatisticsActivity" />
-        <activity android:name=".Activities.Activities.ScanActivity" />
-        <activity android:name=".Activities.Activities.AudioBooksActivity" />
-        <activity android:name=".Activities.Activities.MyLibraryActivity" />
-        <activity android:name=".Activities.Activities.AuthorActivity"></activity>
+        <activity android:name=".Activities.a.BooksAdapter" />
+        <activity android:name=".Activities.a.FavoriteBooksActivity" />
+        <activity android:name=".Activities.a.CategoryMenu" />
+        <activity android:name=".Activities.a.BookActivity" />
+        <activity android:name=".Activities.a.DescriptionActivity" />
+        <activity android:name=".Activities.a.ReviewsActivity" />
+        <activity android:name=".Activities.a.AddReviewActivity" />
+        <activity android:name=".Activities.a.PdfViewer" />
+        <activity android:name=".Activities.a.StatisticsActivity" />
+        <activity android:name=".Activities.a.ScanActivity" />
+        <activity android:name=".Activities.a.MyLibraryActivity" />
+        <activity android:name=".Activities.a.AuthorActivity"></activity>
     </application>
 
 </manifest>
